--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -38,9 +37,6 @@
 	--sidebar-accent-foreground: oklch(0.208 0.042 265.755);
 	--sidebar-border: oklch(0.929 0.013 255.508);
 	--sidebar-ring: oklch(0.7776 0.1578 129.8379);
-	--font-sans: Raleway, ui-sans-serif, sans-serif, system-ui;
-	--font-serif: "Lora", serif;
-	--font-mono: "Fira Code", monospace;
 	--radius: 0.625rem;
 	--shadow-x: 0rem;
 	--shadow-y: 0.25rem;
@@ -68,71 +64,70 @@
 	--shadow-2xl: 0rem 0.25rem 1rem 0rem hsl(87.1795 52.4664% 56.2745% / 0.25);
 	--tracking-normal: 0em;
 	--spacing: 0.25rem;
-	--background: oklch(0.9846 0.0017 247.8389);
-	--foreground: oklch(0.2781 0.0296 256.848);
+	--background: oklch(0.9838 0.0035 247.8583);
+	--foreground: oklch(0.2064 0.0388 265.5472);
+	--shadow-offset-x: 0px;
+	--shadow-offset-y: 8px;
+	--letter-spacing: 0.01em;
 }
 
 .dark {
-	--background: oklch(0.129 0.042 264.695);
-	--foreground: oklch(0.984 0.003 247.858);
-	--card: oklch(0.208 0.042 265.755);
-	--card-foreground: oklch(0.984 0.003 247.858);
-	--popover: oklch(0.208 0.042 265.755);
-	--popover-foreground: oklch(0.984 0.003 247.858);
-	--primary: oklch(0.7776 0.1578 129.8379);
-	--primary-foreground: oklch(0.208 0.042 265.755);
-	--secondary: oklch(0.279 0.041 260.031);
-	--secondary-foreground: oklch(0.984 0.003 247.858);
-	--muted: oklch(0.279 0.041 260.031);
-	--muted-foreground: oklch(0.704 0.04 256.788);
-	--accent: oklch(0.279 0.041 260.031);
-	--accent-foreground: oklch(0.984 0.003 247.858);
-	--destructive: oklch(0.704 0.191 22.216);
-	--destructive-foreground: oklch(1 0 0);
-	--border: oklch(1 0 0 / 10%);
-	--input: oklch(1 0 0 / 15%);
-	--ring: oklch(0.7776 0.1578 129.8379);
-	--chart-1: oklch(0.7776 0.1578 129.8379);
-	--chart-2: oklch(0.7137 0.1434 254.624);
-	--chart-3: oklch(0.9052 0.1657 98.1108);
-	--chart-4: oklch(0.7576 0.159 55.9344);
-	--chart-5: oklch(0.709 0.1592 293.5412);
-	--sidebar: oklch(0.2433 0.0247 263.9506);
-	--sidebar-foreground: oklch(0.9288 0.0126 255.5078);
-	--sidebar-primary: oklch(0.7776 0.1578 129.8379);
+	--background: oklch(0.2064 0.0388 265.5472);
+	--foreground: oklch(0.9838 0.0035 247.8583);
+	--card: oklch(0.2346 0.0478 265.3578);
+	--card-foreground: oklch(0.9838 0.0035 247.8583);
+	--popover: oklch(0.2064 0.0388 265.5472);
+	--popover-foreground: oklch(0.9838 0.0035 247.8583);
+	--primary: oklch(0.8187 0.1715 135.8722);
+	--primary-foreground: oklch(0.2064 0.0388 265.5472);
+	--secondary: oklch(0.2849 0.0382 259.692);
+	--secondary-foreground: oklch(0.9838 0.0035 247.8583);
+	--muted: oklch(0.2849 0.0382 259.692);
+	--muted-foreground: oklch(0.71 0.0348 256.7872);
+	--accent: oklch(0.3499 0.0503 259.6623);
+	--accent-foreground: oklch(0.9838 0.0035 247.8583);
+	--destructive: oklch(0.3996 0.1348 25.7682);
+	--destructive-foreground: oklch(0.9838 0.0035 247.8583);
+	--border: oklch(0.2849 0.0382 259.692);
+	--input: oklch(0.2849 0.0382 259.692);
+	--ring: oklch(0.8187 0.1715 135.8722);
+	--chart-1: oklch(0.8187 0.1715 135.8722);
+	--chart-2: oklch(0.7697 0.0516 248.4987);
+	--chart-3: oklch(0.6776 0.1481 238.1044);
+	--chart-4: oklch(0.6192 0.2037 312.7283);
+	--chart-5: oklch(0.6123 0.2093 6.3856);
+	--sidebar: oklch(0.2253 0.0448 265.4142);
+	--sidebar-foreground: oklch(0.9676 0.0013 286.3752);
+	--sidebar-primary: oklch(0.4878 0.217 264.3876);
 	--sidebar-primary-foreground: oklch(1 0 0);
-	--sidebar-accent: oklch(0.8868 0.1822 95.3305);
-	--sidebar-accent-foreground: oklch(0.2781 0.0296 256.848);
-	--sidebar-border: oklch(0.3729 0.0306 259.7328);
-	--sidebar-ring: oklch(0.7776 0.1578 129.8379);
-	--font-sans: Raleway, ui-sans-serif, sans-serif, system-ui;
-	--font-serif: "Lora", serif;
-	--font-mono: "Fira Code", monospace;
-	--radius: 0.5rem;
+	--sidebar-accent: oklch(0.2741 0.0055 286.0329);
+	--sidebar-accent-foreground: oklch(0.9676 0.0013 286.3752);
+	--sidebar-border: oklch(0.2741 0.0055 286.0329);
+	--sidebar-ring: oklch(0.6232 0.1879 259.7964);
+	--radius: 1rem;
 	--shadow-x: 0rem;
 	--shadow-y: 0.25rem;
-	--shadow-blur: 1rem;
-	--shadow-spread: 0rem;
-	--shadow-opacity: 0.2;
-	--shadow-color: #000000;
-	--shadow-2xs: 0rem 0.25rem 1rem 0rem hsl(0 0% 0% / 0.1);
-	--shadow-xs: 0rem 0.25rem 1rem 0rem hsl(0 0% 0% / 0.1);
+	--shadow-blur: 32px;
+	--shadow-spread: 0px;
+	--shadow-opacity: 0.3;
+	--shadow-color: hsl(0, 0%, 0%);
+	--shadow-2xs: 0px 12px 32px 0px hsl(0 0% 0% / 0.15);
+	--shadow-xs: 0px 12px 32px 0px hsl(0 0% 0% / 0.15);
 	--shadow-sm:
-		0rem 0.25rem 1rem 0rem hsl(0 0% 0% / 0.2),
-		0rem 1px 2px -1px hsl(0 0% 0% / 0.2);
+		0px 12px 32px 0px hsl(0 0% 0% / 0.3), 0px 1px 2px -1px hsl(0 0% 0% / 0.3);
 	--shadow:
-		0rem 0.25rem 1rem 0rem hsl(0 0% 0% / 0.2),
-		0rem 1px 2px -1px hsl(0 0% 0% / 0.2);
+		0px 12px 32px 0px hsl(0 0% 0% / 0.3), 0px 1px 2px -1px hsl(0 0% 0% / 0.3);
 	--shadow-md:
-		0rem 0.25rem 1rem 0rem hsl(0 0% 0% / 0.2),
-		0rem 2px 4px -1px hsl(0 0% 0% / 0.2);
+		0px 12px 32px 0px hsl(0 0% 0% / 0.3), 0px 2px 4px -1px hsl(0 0% 0% / 0.3);
 	--shadow-lg:
-		0rem 0.25rem 1rem 0rem hsl(0 0% 0% / 0.2),
-		0rem 4px 6px -1px hsl(0 0% 0% / 0.2);
+		0px 12px 32px 0px hsl(0 0% 0% / 0.3), 0px 4px 6px -1px hsl(0 0% 0% / 0.3);
 	--shadow-xl:
-		0rem 0.25rem 1rem 0rem hsl(0 0% 0% / 0.2),
-		0rem 8px 10px -1px hsl(0 0% 0% / 0.2);
-	--shadow-2xl: 0rem 0.25rem 1rem 0rem hsl(0 0% 0% / 0.5);
+		0px 12px 32px 0px hsl(0 0% 0% / 0.3), 0px 8px 10px -1px hsl(0 0% 0% / 0.3);
+	--shadow-2xl: 0px 12px 32px 0px hsl(0 0% 0% / 0.75);
+	--shadow-offset-x: 0px;
+	--shadow-offset-y: 12px;
+	--letter-spacing: 0.01em;
+	--spacing: 0.25rem;
 }
 
 @theme inline {
@@ -168,11 +163,6 @@
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-ring: var(--sidebar-ring);
-
-	--font-sans: var(--font-sans);
-	--font-mono: var(--font-mono);
-	--font-serif: var(--font-serif);
-	--font-num: var(--font-num), ui-sans-serif, system-ui, sans-serif;
 
 	--radius-sm: calc(var(--radius) - 4px);
 	--radius-md: calc(var(--radius) - 2px);
@@ -220,6 +210,24 @@
 			opacity: 1;
 		}
 	}
+	--radius: 1rem;
+	--tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+	--tracking-tight: calc(var(--tracking-normal) - 0.025em);
+	--tracking-wide: calc(var(--tracking-normal) + 0.025em);
+	--tracking-wider: calc(var(--tracking-normal) + 0.05em);
+	--tracking-widest: calc(var(--tracking-normal) + 0.1em);
+	--tracking-normal: var(--tracking-normal);
+	--spacing: var(--spacing);
+	--letter-spacing: var(--letter-spacing);
+	--shadow-offset-y: var(--shadow-offset-y);
+	--shadow-offset-x: var(--shadow-offset-x);
+	--shadow-spread: var(--shadow-spread);
+	--shadow-blur: var(--shadow-blur);
+	--shadow-opacity: var(--shadow-opacity);
+	--color-shadow-color: var(--shadow-color);
+	--radius-2xl: calc(var(--radius) + 8px);
+	--radius-3xl: calc(var(--radius) + 12px);
+	--radius-4xl: calc(var(--radius) + 16px);
 }
 
 @utility container-padding {
@@ -246,5 +254,6 @@
 
 	body {
 		@apply bg-background text-foreground;
+		letter-spacing: var(--tracking-normal);
 	}
 }
